# illuminanced

./: .travis.yml  Cargo.toml  README.md  illuminanced.service  illuminanced.toml  install.sh
.github/: FUNDING.yml
src/: config.rs  discrete_value.rs  kalman.rs  main.rs  switch_monitor.rs
